feature/T03 - Adicionado request create user
