# src/routers/user.router.ts
@@ -1,15 +1,16 @@
-import express from 'express';
+import express, { Request, Response } from 'express';
 import { BadRequestError } from './../core/error/ApiError';
-import { SuccessResponse } from './../core/response/ApiResponse';
 import asyncHandler from '../core/utils/asyncHandler';
+import UserController from './../api/controllers/user.controller';
 
 const userRouter = express.Router();
 
-userRouter.get(
-  '/test',
-  asyncHandler(async (req, res) => {
-    if (!req) throw new BadRequestError('User not registered');
-    return new SuccessResponse('success').send(res);
+userRouter.post(
+  '/register',
+  asyncHandler(async (req: Request, res: Response) => {
+    if (!req) throw new BadRequestError('Bad request');
+    return await UserController.register(req, res);
   })
 );
+
 export default userRouter;
